--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.12.4",
     "requests>=2.32.5",
+    "tenacity>=9.1.2",
     "undetected-chromedriver>=3.5.5",
 ]
