FEAT - PYTest Coverage is added for project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,21 @@ dependencies = [
     "tenacity>=9.1.2",
     "undetected-chromedriver>=3.5.5",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.2.2",
+    "pytest-mock>=3.14.0",
+    "fakeredis>=2.23.0",
+    "pluggy>=1.5.0",
+]
+
+[dependency-groups]
+dev = [
+    "fakeredis>=2.32.1",
+    "pytest>=9.0.0",
+    "pytest-mock>=3.15.1",
+]
+
+[tool.pytest.ini_options]
+pythonpath = "."
