--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.2",
     "black>=25.9.0",
+    "boto3>=1.40.70",
     "httpx>=0.28.1",
     "pydantic>=2.12.4",
     "redis>=7.0.1",
