--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,12 @@ beautifulsoup4==4.14.2
     # via scraping-template
 black==25.9.0
     # via scraping-template
+boto3==1.40.70
+    # via scraping-template
+botocore==1.40.70
+    # via
+    #   boto3
+    #   s3transfer
 certifi==2025.10.5
     # via
     #   httpcore
@@ -45,6 +51,10 @@ idna==3.11
     #   trio
 iniconfig==2.3.0
     # via pytest
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 mypy-extensions==1.1.0
     # via black
 outcome==1.3.0.post0
@@ -74,6 +84,8 @@ pysocks==1.7.1
 pytest==9.0.0
     # via pytest-mock
 pytest-mock==3.15.1
+python-dateutil==2.9.0.post0
+    # via botocore
 pytokens==0.3.0
     # via black
 redis==7.0.1
@@ -84,8 +96,12 @@ requests==2.32.5
     # via
     #   scraping-template
     #   undetected-chromedriver
+s3transfer==0.14.0
+    # via boto3
 selenium==4.38.0
     # via undetected-chromedriver
+six==1.17.0
+    # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
@@ -118,6 +134,7 @@ undetected-chromedriver==3.5.5
     # via scraping-template
 urllib3==2.5.0
     # via
+    #   botocore
     #   requests
     #   selenium
 websocket-client==1.9.0
