FEAT - File Export option added for S3 like platform

--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,12 @@ REDIS_URI=REDIS_URI=rediss://default:password@host:6379
 # Selenium
 CHROME_BROWSER_PATH=
 CHROME_DRIVER_PATH=
+
+# AWS S3 Configs
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_ENDPOINT_URL_S3=
+S3_BUCKET_NAME=
+
+# Cloudflare Example
+#AWS_ENDPOINT_URL_S3=https://<ACCOUNT_ID>.r2.cloudflarestorage.com
