FIX - Python OTEL added for APM and log traces.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ dependencies = [
     "black>=25.9.0",
     "boto3>=1.40.70",
     "httpx>=0.28.1",
+    "opentelemetry-distro>=0.59b0",
+    "opentelemetry-exporter-gcp-logging>=1.11.0a0",
+    "opentelemetry-exporter-otlp>=1.38.0",
+    "opentelemetry-instrumentation-boto>=0.59b0",
+    "opentelemetry-instrumentation-botocore>=0.59b0",
+    "opentelemetry-instrumentation-logging>=0.59b0",
+    "opentelemetry-instrumentation-redis>=0.59b0",
+    "opentelemetry-instrumentation-requests>=0.59b0",
+    "opentelemetry-instrumentation-sqlite3>=0.59b0",
     "pydantic>=2.12.4",
     "redis>=7.0.1",
     "requests>=2.32.5",
