--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ botocore==1.40.70
     # via
     #   boto3
     #   s3transfer
+cachetools==6.2.1
+    # via google-auth
 certifi==2025.10.5
     # via
     #   httpcore
@@ -35,6 +37,45 @@ colorama==0.4.6 ; sys_platform == 'win32'
     #   click
     #   pytest
 fakeredis==2.32.1
+google-api-core==2.28.1
+    # via
+    #   google-cloud-appengine-logging
+    #   google-cloud-core
+    #   google-cloud-logging
+google-auth==2.43.0
+    # via
+    #   google-api-core
+    #   google-cloud-appengine-logging
+    #   google-cloud-core
+    #   google-cloud-logging
+google-cloud-appengine-logging==1.7.0
+    # via google-cloud-logging
+google-cloud-audit-log==0.4.0
+    # via google-cloud-logging
+google-cloud-core==2.5.0
+    # via google-cloud-logging
+google-cloud-logging==3.12.1
+    # via opentelemetry-exporter-gcp-logging
+googleapis-common-protos==1.72.0
+    # via
+    #   google-api-core
+    #   google-cloud-audit-log
+    #   grpc-google-iam-v1
+    #   grpcio-status
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+grpc-google-iam-v1==0.14.3
+    # via google-cloud-logging
+grpcio==1.76.0
+    # via
+    #   google-api-core
+    #   google-cloud-appengine-logging
+    #   googleapis-common-protos
+    #   grpc-google-iam-v1
+    #   grpcio-status
+    #   opentelemetry-exporter-otlp-proto-grpc
+grpcio-status==1.76.0
+    # via google-api-core
 h11==0.16.0
     # via
     #   httpcore
@@ -49,6 +90,8 @@ idna==3.11
     #   httpx
     #   requests
     #   trio
+importlib-metadata==8.7.0
+    # via opentelemetry-api
 iniconfig==2.3.0
     # via pytest
 jmespath==1.0.1
@@ -57,6 +100,90 @@ jmespath==1.0.1
     #   botocore
 mypy-extensions==1.1.0
     # via black
+opentelemetry-api==1.38.0
+    # via
+    #   google-cloud-logging
+    #   opentelemetry-distro
+    #   opentelemetry-exporter-gcp-logging
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-boto
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-logging
+    #   opentelemetry-instrumentation-redis
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-sqlite3
+    #   opentelemetry-propagator-aws-xray
+    #   opentelemetry-resourcedetector-gcp
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
+opentelemetry-distro==0.59b0
+    # via scraping-template
+opentelemetry-exporter-gcp-logging==1.11.0a0
+    # via scraping-template
+opentelemetry-exporter-otlp==1.38.0
+    # via scraping-template
+opentelemetry-exporter-otlp-proto-common==1.38.0
+    # via
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+    # via opentelemetry-exporter-otlp
+opentelemetry-exporter-otlp-proto-http==1.38.0
+    # via opentelemetry-exporter-otlp
+opentelemetry-instrumentation==0.59b0
+    # via
+    #   opentelemetry-distro
+    #   opentelemetry-instrumentation-boto
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-logging
+    #   opentelemetry-instrumentation-redis
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-instrumentation-sqlite3
+opentelemetry-instrumentation-boto==0.59b0
+    # via scraping-template
+opentelemetry-instrumentation-botocore==0.59b0
+    # via scraping-template
+opentelemetry-instrumentation-dbapi==0.59b0
+    # via opentelemetry-instrumentation-sqlite3
+opentelemetry-instrumentation-logging==0.59b0
+    # via scraping-template
+opentelemetry-instrumentation-redis==0.59b0
+    # via scraping-template
+opentelemetry-instrumentation-requests==0.59b0
+    # via scraping-template
+opentelemetry-instrumentation-sqlite3==0.59b0
+    # via scraping-template
+opentelemetry-propagator-aws-xray==1.0.2
+    # via opentelemetry-instrumentation-botocore
+opentelemetry-proto==1.38.0
+    # via
+    #   opentelemetry-exporter-otlp-proto-common
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+opentelemetry-resourcedetector-gcp==1.11.0a0
+    # via opentelemetry-exporter-gcp-logging
+opentelemetry-sdk==1.38.0
+    # via
+    #   opentelemetry-distro
+    #   opentelemetry-exporter-gcp-logging
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-resourcedetector-gcp
+opentelemetry-semantic-conventions==0.59b0
+    # via
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-boto
+    #   opentelemetry-instrumentation-botocore
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-redis
+    #   opentelemetry-instrumentation-requests
+    #   opentelemetry-sdk
+opentelemetry-util-http==0.59b0
+    # via opentelemetry-instrumentation-requests
 outcome==1.3.0.post0
     # via
     #   trio
@@ -64,6 +191,7 @@ outcome==1.3.0.post0
 packaging==25.0
     # via
     #   black
+    #   opentelemetry-instrumentation
     #   pytest
 pathspec==0.12.1
     # via black
@@ -71,6 +199,28 @@ platformdirs==4.5.0
     # via black
 pluggy==1.6.0
     # via pytest
+proto-plus==1.26.1
+    # via
+    #   google-api-core
+    #   google-cloud-appengine-logging
+    #   google-cloud-logging
+protobuf==6.33.0
+    # via
+    #   google-api-core
+    #   google-cloud-appengine-logging
+    #   google-cloud-audit-log
+    #   google-cloud-logging
+    #   googleapis-common-protos
+    #   grpc-google-iam-v1
+    #   grpcio-status
+    #   opentelemetry-proto
+    #   proto-plus
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pycparser==2.23 ; implementation_name != 'PyPy' and implementation_name != 'pypy' and os_name == 'nt'
     # via cffi
 pydantic==2.12.4
@@ -94,8 +244,13 @@ redis==7.0.1
     #   scraping-template
 requests==2.32.5
     # via
+    #   google-api-core
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-resourcedetector-gcp
     #   scraping-template
     #   undetected-chromedriver
+rsa==4.9.1
+    # via google-auth
 s3transfer==0.14.0
     # via boto3
 selenium==4.38.0
@@ -124,6 +279,13 @@ typing-extensions==4.15.0
     # via
     #   anyio
     #   beautifulsoup4
+    #   grpcio
+    #   opentelemetry-api
+    #   opentelemetry-exporter-otlp-proto-grpc
+    #   opentelemetry-exporter-otlp-proto-http
+    #   opentelemetry-resourcedetector-gcp
+    #   opentelemetry-sdk
+    #   opentelemetry-semantic-conventions
     #   pydantic
     #   pydantic-core
     #   selenium
@@ -141,5 +303,12 @@ websocket-client==1.9.0
     # via selenium
 websockets==15.0.1
     # via undetected-chromedriver
+wrapt==1.17.3
+    # via
+    #   opentelemetry-instrumentation
+    #   opentelemetry-instrumentation-dbapi
+    #   opentelemetry-instrumentation-redis
 wsproto==1.2.0
     # via trio-websocket
+zipp==3.23.0
+    # via importlib-metadata
